<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".fragment.historyfragment.TodaysFragment"
    android:background="#FFFF">

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="@dimen/_10sdp"
        android:background="#D8DCE2" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_20sdp"
        android:layout_marginLeft="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:text="@string/next_time"
        android:textColor="#405ED5"
        android:textSize="@dimen/_13ssp" />

    <LinearLayout
        android:background="#FFF"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_70sdp"
        android:layout_gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_time_next"
            android:layout_width="@dimen/_55sdp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="@dimen/_20sdp"
            android:layout_marginLeft="@dimen/_20sdp"
            android:text="@string/_10_00"
            android:textColor="#666666"
            android:textSize="@dimen/_13ssp"
            android:textStyle="bold" />

        <FrameLayout
            android:background="#FFF"
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <RelativeLayout
                android:background="#FFF"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
 <LinearLayout
     android:layout_centerVertical="true"
     android:layout_width="match_parent"
     android:layout_height="@dimen/_46sdp">

                <androidx.cardview.widget.CardView
                    android:id="@+id/card"
                    android:outlineAmbientShadowColor="#CC797777"
                    android:outlineSpotShadowColor="#CC797777"
                    android:layout_marginStart="@dimen/_3sdp"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_40sdp"
                    android:layout_marginEnd="@dimen/_20sdp"
                    android:layout_marginRight="@dimen/_20sdp"
                    app:cardCornerRadius="@dimen/_3sdp"
                    app:cardElevation="@dimen/_3sdp"
                    android:layout_marginLeft="@dimen/_2sdp"
                    tools:targetApi="p">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <TextView
                            android:id="@+id/tv_water_nexts"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerVertical="true"
                            android:layout_marginStart="@dimen/_10sdp"
                            android:layout_marginLeft="@dimen/_10sdp"
                            android:text="@string/_550ml"
                            android:textColor="#666666"
                            android:textSize="@dimen/_13ssp" />

                        <FrameLayout

                            android:id="@+id/item_more"
                            android:layout_width="@dimen/_100sdp"
                            android:layout_height="match_parent"
                            android:layout_alignParentEnd="true"
                            android:layout_alignParentRight="true">

                            <RelativeLayout
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                tools:ignore="UselessParent">

                                <ImageView
                                    android:layout_width="@dimen/_3sdp"
                                    android:layout_height="@dimen/_12sdp"
                                    android:layout_alignParentEnd="true"
                                    android:layout_alignParentRight="true"
                                    android:layout_centerVertical="true"
                                    android:layout_marginEnd="@dimen/_15sdp"
                                    android:layout_marginRight="@dimen/_15sdp"
                                    android:src="@drawable/ic_menu" />
                            </RelativeLayout>

                        </FrameLayout>
                    </RelativeLayout>

                </androidx.cardview.widget.CardView>
 </LinearLayout>

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <RelativeLayout
                    android:id="@+id/popup"
                    android:layout_width="@dimen/_125sdp"
                    android:layout_height="@dimen/_32sdp"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentBottom="true"
                    android:layout_marginEnd="@dimen/_13sdp"
                    android:layout_marginRight="@dimen/_13sdp"
                    android:background="@drawable/popup233"
                    android:visibility="invisible">

                    <ImageView
                        android:layout_width="@dimen/_15sdp"
                        android:layout_height="@dimen/_15sdp"
                        android:layout_centerVertical="true"
                        android:layout_marginStart="@dimen/_14sdp"
                        android:layout_marginLeft="@dimen/_14sdp"
                        android:src="@drawable/ic_edit" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:text="@string/edit"
                        android:textColor="#252450" />

                </RelativeLayout>
            </RelativeLayout>

        </FrameLayout>


    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_20sdp"
        android:layout_marginLeft="@dimen/_20sdp"
        android:text="@string/records"
        android:textColor="#405ED5"
        android:textSize="@dimen/_13ssp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/_210sdp">

        <androidx.recyclerview.widget.RecyclerView
            android:background="#FFF"
            android:id="@+id/rv_historys"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_5sdp" />
    </LinearLayout>


</LinearLayout>