<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFF"
    android:orientation="vertical"
    tools:context=".fragment.historyfragment.HistorysFragment">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_20sdp"
        android:layout_marginLeft="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_5sdp"
        android:text="@string/history"
        android:textColor="#233BBB"
        android:textSize="@dimen/_20ssp"
        android:textStyle="bold" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/_32sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:background="#FFF">

        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_20sdp"
            android:layout_marginLeft="@dimen/_20sdp"
            android:background="#FFF"
            android:orientation="horizontal">


            <androidx.cardview.widget.CardView

                android:id="@+id/today_off"
                android:layout_width="@dimen/_70sdp"
                android:layout_height="@dimen/_21sdp"
                android:layout_marginStart="@dimen/_2sdp"
                android:layout_marginLeft="@dimen/_2sdp"
                android:layout_marginTop="@dimen/_1sdp"
                android:layout_marginEnd="@dimen/_10sdp"
                android:layout_marginRight="@dimen/_10sdp"
                android:clickable="true"
                android:focusable="true"
                android:visibility="invisible"
                app:cardBackgroundColor="#F1EFEF"
                app:cardCornerRadius="@dimen/_10sdp"
                app:cardElevation="0dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/today"
                    android:textColor="#666666"
                    android:textSize="@dimen/_11ssp" />
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/week_off"
                android:layout_width="@dimen/_70sdp"
                android:layout_height="@dimen/_21sdp"
                android:layout_marginTop="@dimen/_1sdp"
                android:layout_marginEnd="@dimen/_10sdp"
                android:layout_marginRight="@dimen/_10sdp"
                android:clickable="true"
                android:focusable="true"
                app:cardBackgroundColor="#F1EFEF"
                app:cardCornerRadius="@dimen/_10sdp"
                app:cardElevation="0dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/week"
                    android:textColor="#666666"
                    android:textSize="@dimen/_11ssp" />

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/month_off"
                android:layout_width="@dimen/_70sdp"
                android:layout_height="@dimen/_21sdp"
                android:layout_marginTop="@dimen/_1sdp"
                android:clickable="true"
                android:focusable="true"
                app:cardBackgroundColor="#F1EFEF"
                app:cardCornerRadius="@dimen/_10sdp"
                app:cardElevation="0dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/months"
                    android:textColor="#666666"
                    android:textSize="@dimen/_11ssp" />

            </androidx.cardview.widget.CardView>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/_32sdp"
            android:layout_marginStart="@dimen/_20sdp"
            android:layout_marginLeft="@dimen/_20sdp"
            android:orientation="horizontal">
            <androidx.cardview.widget.CardView
                android:layout_marginTop="@dimen/_1sdp"
                android:id="@+id/today_on"
                android:layout_width="@dimen/_70sdp"
                android:layout_height="@dimen/_23sdp"
                android:layout_marginStart="@dimen/_2sdp"
                android:layout_marginLeft="@dimen/_2sdp"
                android:layout_marginEnd="@dimen/_8sdp"
                android:layout_marginRight="@dimen/_8sdp"
                android:clickable="true"
                android:focusable="true"
                android:visibility="visible"
                app:cardCornerRadius="@dimen/_12sdp"
                app:cardElevation="@dimen/_3sdp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/today"
                    android:textColor="#666666"
                    android:textSize="@dimen/_11ssp" />
            </androidx.cardview.widget.CardView>


            <androidx.cardview.widget.CardView
              android:visibility="invisible"
                android:id="@+id/week_on"
                android:layout_width="@dimen/_70sdp"
                android:layout_height="@dimen/_23sdp"
                android:layout_marginTop="@dimen/_1sdp"
                android:layout_marginEnd="@dimen/_8sdp"
                android:layout_marginRight="@dimen/_8sdp"
                android:clickable="true"
                android:focusable="true"
                app:cardCornerRadius="@dimen/_12sdp"
                app:cardElevation="@dimen/_3sdp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/week"
                    android:textColor="#666666"
                    android:textSize="@dimen/_11ssp" />

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/month_on"
                android:layout_width="@dimen/_70sdp"
                android:layout_height="@dimen/_23sdp"
                android:layout_marginTop="@dimen/_1sdp"
                android:clickable="true"
                android:focusable="true"
                android:visibility="invisible"
                app:cardCornerRadius="@dimen/_12sdp"
                app:cardElevation="@dimen/_3sdp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/months"
                    android:textColor="#666666"
                    android:textSize="@dimen/_11ssp" />

            </androidx.cardview.widget.CardView>

        </LinearLayout>
    </FrameLayout>

    <FrameLayout
        android:id="@+id/container_History"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

</LinearLayout>